k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swimlane
  labels:
    app.kubernetes.io/name: swimlane-devops-practical
