k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swimlane-app
  labels:
    app.kubernetes.io/name: swimlane-devops-practical
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: swimlane-devops-practical
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
