k8s/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app.kubernetes.io/name: swimlane-devops-practical
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: swimlane-devops-practical
    app.kubernetes.io/component: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
