k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: swimlane-app
  labels:
    app.kubernetes.io/name: swimlane-devops-practical
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: swimlane-devops-practical
      app.kubernetes.io/component: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: swimlane-devops-practical
              app.kubernetes.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
  labels:
    app.kubernetes.io/name: swimlane-devops-practical
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: swimlane-devops-practical
      app.kubernetes.io/component: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: swimlane-devops-practical
              app.kubernetes.io/component: web
      ports:
        - protocol: TCP
          port: 27017
